@@ -5,7 +5,9 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixes a bug where the activity view crashed when the modifying user is no
+  longer available.
+  [mbaechtold]
 
 
 1.1.2 (2014-09-24)
